--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha test"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,8 @@
   "homepage": "https://github.com/dimichgh/trooba#readme",
   "devDependencies": {
     "mocha": "^3.1.2"
+  },
+  "dependencies": {
+    "lodash": "^4.16.6"
   }
 }
