--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
   },
   "homepage": "https://github.com/dimichgh/trooba#readme",
   "devDependencies": {
-    "mocha": "^3.1.2"
-  },
-  "dependencies": {
-    "lodash": "^4.16.6"
+    "mocha": "^3.1.2",
+    "nock": "^9.0.2"
   }
 }
