--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "bugs": {
     "url": "https://github.com/dimichgh/trooba/issues"
   },
+  "publishConfig": {
+    "registry": "http://registry.npmjs.org"
+  },
   "homepage": "https://github.com/dimichgh/trooba#readme",
   "devDependencies": {
     "mocha": "^3.1.2",
