--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha test"
+      "test": "./node_modules/.bin/mocha test",
+      "test-coverage": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
   "homepage": "https://github.com/dimichgh/trooba#readme",
   "devDependencies": {
     "async": "^2.1.4",
+    "istanbul": "^0.4.5",
     "lodash": "^4.17.2",
     "mocha": "^3.1.2",
     "nock": "^9.0.2"
