--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dimichgh/trooba.git"
+    "url": "git+https://github.com/trooba/trooba.git"
   },
   "keywords": [
     "pipe",
@@ -23,12 +23,12 @@
   "author": "Dmytro Semenov <dimichgh@yahoo.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dimichgh/trooba/issues"
+    "url": "https://github.com/trooba/trooba/issues"
   },
   "publishConfig": {
     "registry": "http://registry.npmjs.org"
   },
-  "homepage": "https://github.com/dimichgh/trooba#readme",
+  "homepage": "https://github.com/trooba/trooba#readme",
   "devDependencies": {
     "async": "^2.1.4",
     "istanbul": "^0.4.5",
