--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ install:
 - npm install -g codecov istanbul
 script:
 - npm test
-- istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
+- istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --timeout 3s -R spec
 - codecov
