making travis tests node version specific

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,24 @@
 node_js:
 - "0.12"
+env:
+    - TARGET=test-0.12
 - "4"
+env:
+    - TARGET=test
 - "6"
+env:
+    - TARGET=test
 - "7"
+env:
+    - TARGET=test
+- "8"
+env:
+    - TARGET=test
 language: node_js
 install:
 - npm install
 - npm install -g codecov istanbul
 script:
-- npm test
+- npm $TARGET
 - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --timeout 5s -R spec
 - codecov
