--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha test",
+    "test": "./node_modules/.bin/mocha test/index test/readme test/index-4.x",
+    "test-0.12": "./node_modules/.bin/mocha test/index test/readme",
     "test-coverage": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec"
   },
   "repository": {
