--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,20 @@
-node_js:
-- "0.12"
-  env: TARGET test-0.12
-- "4"
-  env: TARGET test
-- "6"
-  env: TARGET test
-- "7"
-  env: TARGET test
-- "8"
-  env: TARGET test
 language: node_js
+matrix:
+  include:
+    - node_js: "0.12" # this is not strictly necessary
+      env: TARGET=test-0.12
+    - node_js: "4"
+      env: TARGET=test
+    - node_js: "6"
+      env: TARGET=test
+    - node_js: "7"
+      env: TARGET=test
+    - node_js: "8"
+      env: TARGET=test
 install:
 - npm install
 - npm install -g codecov istanbul
 script:
-- npm $TARGET
+- npm run $TARGET
 - istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --timeout 5s -R spec
 - codecov
