--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,29 @@ language: node_js
 matrix:
   include:
     - node_js: "0.12" # this is not strictly necessary
-      env: TARGET=test-0.12
+      env:
+          - TARGET=test-0.12
+          - TEST=test/index test/readme
     - node_js: "4"
-      env: TARGET=test
+      env:
+          - TARGET=test
+          - TEST=test/index test/readme test/index.4.x
     - node_js: "6"
-      env: TARGET=test
+      env:
+          - TARGET=test
+          - TEST=test/index test/readme test/index.4.x
     - node_js: "7"
-      env: TARGET=test
+      env:
+          - TARGET=test
+          - TEST=test/index test/readme test/index.4.x
     - node_js: "8"
-      env: TARGET=test
+      env:
+          - TARGET=test
+          - TEST=test/index test/readme test/index.4.x
 install:
 - npm install
 - npm install -g codecov istanbul
 script:
 - npm run $TARGET
-- istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --timeout 5s -R spec
+- istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --timeout 5s -R spec $TESTS
 - codecov
