--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,30 @@
-node_js:
-- "0.12"
-- "4"
-- "6"
-- "7"
 language: node_js
+matrix:
+  include:
+    - node_js: "0.12" # this is not strictly necessary
+      env:
+          - TARGET=test-0.12
+          - TESTS=test/index test/readme
+    - node_js: "4"
+      env:
+          - TARGET=test
+          - TESTS=test/index test/readme test/index.4.x
+    - node_js: "6"
+      env:
+          - TARGET=test
+          - TESTS=test/index test/readme test/index.4.x
+    - node_js: "7"
+      env:
+          - TARGET=test
+          - TESTS=test/index test/readme test/index.4.x
+    - node_js: "8"
+      env:
+          - TARGET=test
+          - TESTS=test/index test/readme test/index.4.x
 install:
 - npm install
 - npm install -g codecov istanbul
 script:
-- npm test
-- istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --timeout 5s -R spec
+- npm run $TARGET
+- istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --timeout 5s -R spec $TESTS
 - codecov
