partial update, tests still fail

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "trooba",
-  "version": "2.1.2",
+  "version": "3.0.0",
   "description": "a simple pipe to build service client and backend frameworks",
-  "main": "index.js",
+  "main": "pipe.js",
   "directories": {
     "test": "test"
   },
