updated publishConfig link

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "url": "https://github.com/trooba/trooba/issues"
   },
   "publishConfig": {
-    "registry": "http://registry.npmjs.org"
+    "registry": "https://registry.npmjs.org"
   },
   "homepage": "https://github.com/trooba/trooba#readme",
   "devDependencies": {
